.kubernetes/chatapp.yaml
---
apiVersion: v1
kind: Namespace
metadata:
 name: k8s-sidratul
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: k8s-sidratul
 namespace: k8s-sidratul
 labels:
   app: k8s-sidratul
spec:
 replicas: 1
 selector:
   matchLabels:
     app: k8s-sidratul
 template:
   metadata:
     name: k8s-sidratul
     labels:
       app: k8s-sidratul
   spec:
     containers:
       - name: k8s-sidratul
         image: islamsidratul/chat-app
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: 3000
             protocol: TCP
     restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
 name: k8s-sidratul-service
 namespace: k8s-sidratul
spec:
 type: ClusterIP
 ports:
   - port: 8000
     targetPort: 3000
 selector:
   app: k8s-sidratul
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: k8s-sidratul-ingress
 namespace: k8s-sidratul
 annotations:
   cert-manager.io/issuer: "letsencrypt-prod"
spec:
 ingressClassName: nginx
 tls:
   - hosts:
       - k8s-sidratul.rfft.nl
     secretName: k8s-sidratul-cert
 rules:
   - host: "k8s-sidratul.rfft.nl"
     http:
       paths:
         - pathType: Prefix
           path: "/"
           backend:
             service:
               name: k8s-sidratul-service
               port:
                 number: 8000
